src/main/java/com/example/Fooding/common/exception/error/LoginFailedException.java
package com.example.Fooding.common.exception.error;

import com.example.Fooding.common.exception.ErrorCode;

public class LoginFailedException extends RuntimeException{
    public LoginFailedException(){
        super(ErrorCode.LOGIN_FAILED.getMessage());
    }
}